funcionalidade do botao

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -66,6 +66,7 @@ body {
 }
 
 .container .rightSide {
+  position: relative;
   margin-left: 40px;
   display: flex;
 }
@@ -75,4 +76,26 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
+}
+.rightSide .rightArrow {
+  position: absolute;
+  top: calc(50% - 35px);
+  margin-left: -35px;
+  background-color: #227C9D;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  transition: opacity ease .3s;
+}
+.rightSide .rightArrow:hover {
+  opacity: .9;
+}
+.rightSide .gridBig {
+  flex: 1;
+  display: flex;
 }
