--- a/src/components/GridItem/GridItem.module.css
+++ b/src/components/GridItem/GridItem.module.css
@@ -25,6 +25,11 @@
   margin-top: 5px;
 }
 
+.yourImc {
+  font-size: 17px;
+  margin: 10px 0 50px;
+}
+
 .gridInfo {
   font-size: 12px;
   margin-top: 14px;
