--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,7 +5,9 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
-
+.main {
+  padding-bottom: 50px;
+}
 .headerContainer {
   max-width: 900px;
   margin: 40px auto;
@@ -105,4 +107,36 @@ body {
 .rightSide .gridBig {
   flex: 1;
   display: flex;
+}
+
+@media (max-width: 900px) {
+  .main {
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+  }
+  .container {
+    flex-direction: column;
+  }
+
+  .container .leftSide, 
+  .container .rightSide {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .container .leftSide {
+    margin-bottom: 40px;
+  }
+
+  .rightSide .rightArrow  {
+    top: 0;
+    margin-left: 0;
+    border-radius: 10px;
+  }
+}
+
+@media (max-width: 425px) {
+  .rightSide .grid {
+    grid-template-columns: 1fr;
+  }
 }
